--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,5 +1,5 @@
 <aside class="author">
-  <img class="profile-image" src="{{ .Site.Params.avatar | absURL }}" alt="{{ .Site.Params.author }}" />
+  <img class="profile-image" src="{{ .Site.Params.avatar | relURL }}" srcset="{{ .Site.Params.avatar | relURL }} 1x, {{ .Site.Params.avatar2x | relURL }} 2x, {{ .Site.Params.avatar3x | relURL }} 3x" alt="{{ .Site.Params.author }}" />
   <p class="name">{{ .Site.Data.l10n.author.by }}
   <strong>{{ .Site.Params.author }}</strong></p>
   <p class="address">{{ .Site.Params.location }}</p>
