--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -3,7 +3,7 @@
 <div class="container clearfix">
     <main role="main" class="content">
         <article class="post">
-            <a class="btn" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
+            <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
             {{ partial "article-header" . }}
             {{ .Content}}
             {{ partial "article-share" . }}
