--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,14 @@
 {{ partial "header" . }}
 
 <div class="container clearfix">
-    <main role="main" class="content">
+    <main class="content">
         <article class="post page">
-            <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
-            <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
+            <nav>
+                <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
+            </nav>
+            <header>
+                <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
+            </header>
             {{ .Content}}
         </article>
     </main>
