--- a/layouts/partials/article-share.html
+++ b/layouts/partials/article-share.html
@@ -1,15 +1,17 @@
-<ul class="share-buttons">
-    <li>{{ .Site.Data.l10n.share.title }}</li>
-    <li>
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="{{ .Site.Data.l10n.share.facebook }}"><i class="fa fa-facebook-square fa-lg"></i></a>
-    </li>
-    <li>
-        <a href="https://twitter.com/share?text={{ .Title }}&amp;url={{ .Permalink }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;" title="{{ .Site.Data.l10n.share.twitter }}"><i class="fa fa-twitter fa-lg"></i></a>
-    </li>
-    <li>
-        <a href="https://plus.google.com/share?url={{ .Permalink }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;" title="{{ .Site.Data.l10n.share.gplus }}"><i class="fa fa-google-plus fa-lg"></i></a>
-    </li>
-    <li>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}" onclick="window.open(this.href, 'linkedin-share', 'width=600,height=494');return false;" title="{{ .Site.Data.l10n.share.linkedin }}"><i class="fa fa-linkedin fa-lg"></i></a>
-    </li>
-</ul>
+<footer>
+    <ul class="share-buttons">
+        <li>{{ .Site.Data.l10n.share.title }}</li>
+        <li>
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="{{ .Site.Data.l10n.share.facebook }}"><i class="fa fa-facebook-square fa-lg"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/share?text={{ .Title }}&amp;url={{ .Permalink }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;" title="{{ .Site.Data.l10n.share.twitter }}"><i class="fa fa-twitter fa-lg"></i></a>
+        </li>
+        <li>
+            <a href="https://plus.google.com/share?url={{ .Permalink }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;" title="{{ .Site.Data.l10n.share.gplus }}"><i class="fa fa-google-plus fa-lg"></i></a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}" onclick="window.open(this.href, 'linkedin-share', 'width=600,height=494');return false;" title="{{ .Site.Data.l10n.share.linkedin }}"><i class="fa fa-linkedin fa-lg"></i></a>
+        </li>
+    </ul>
+</footer>
