--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,15 +1,17 @@
 {{ partial "header" . }}
 
 <div class="container clearfix">
-    <main role="main" class="content">
+    <main class="content">
         <article class="post">
-            <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
+            <nav>
+                <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
+            </nav>
             {{ partial "article-header" . }}
             {{ .Content}}
             {{ partial "article-share" . }}
         </article>
         <div class="comments">
-            <h3>{{ .Site.Data.l10n.comments.comments }}</h3>
+            <h2>{{ .Site.Data.l10n.comments.comments }}</h2>
             {{ template "_internal/disqus.html" . }}
         </div>
     </main>
