Add the last part of Moving to a Static Website blog post series

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -10,10 +10,10 @@
             {{ .Content}}
             {{ partial "article-share" . }}
         </article>
-        <div class="comments">
+        <section class="comments">
             <h2>{{ .Site.Data.l10n.comments.comments }}</h2>
             {{ template "_internal/disqus.html" . }}
-        </div>
+        </section>
     </main>
     {{ partial "author" . }}
 </div>
