Remove unneeded redirects

--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ with .Site.Social.linkedin }}
-<li><a href="//linkedin.com/in/{{.}}" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+<li><a href="//www.linkedin.com/in/{{.}}" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.github }}
