--- a/themes/hugo-minimalist-theme/layouts/partials/article-list.html
+++ b/themes/hugo-minimalist-theme/layouts/partials/article-list.html
@@ -1,5 +1,5 @@
 <div class="container clearfix">
-    <main role="main" class="content">
+    <main class="content">
         {{ $paginator := .Paginate (where .Site.Pages "Type" "post") }}
         {{ range $paginator.Pages }}
             {{ .Render "summary" }}
