Change Google+ link from author to publisher

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -48,7 +48,7 @@
     {{ end }}
 
     <!-- Google authorship -->
-    {{ with .Site.Params.googleAuthorship }}<link rel="author" href="https://plus.google.com/+{{ . }}">{{ end }}
+    {{ with .Site.Params.googleAuthorship }}<link rel="publisher" href="https://plus.google.com/+{{ . }}">{{ end }}
   </head>
   <body>
     <header class="site-header">
