--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,11 +27,11 @@
     <title>{{ if not .IsHome }}{{ .Title }} &middot; {{ .Site.Title }}{{ else }}{{ .Site.Params.defaultTitle }}{{ end }}</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:400,700|Lato:400,400italic,700|Source+Code+Pro">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Lato:400,400italic,700|Source+Code+Pro">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ "/css/normalize.css" | relURL }}">
     <link rel="stylesheet" href="{{ "/css/styles.css" | relURL }}">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/solarized-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/solarized-dark.min.css">
     <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
 
     <!-- Canonical URL -->
