--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,29 +1,29 @@
 {{ with .Site.Social.twitter }}
-<li><a href="//twitter.com/{{.}}" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+<li><a href="https://twitter.com/{{.}}" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.linkedin }}
-<li><a href="//www.linkedin.com/in/{{.}}" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+<li><a href="https://www.linkedin.com/in/{{.}}" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.github }}
-<li><a href="//github.com/{{.}}" target="_blank" title="Github"><i class="fa fa-github"></i></a></li>
+<li><a href="https://github.com/{{.}}" target="_blank" title="Github"><i class="fa fa-github"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.flickr }}
-<li><a href="//flickr.com/photos/{{.}}" target="_blank" title="Flickr"><i class="fa fa-flickr"></i></a></li>
+<li><a href="https://flickr.com/photos/{{.}}" target="_blank" title="Flickr"><i class="fa fa-flickr"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.vimeo }}
-<li><a href="//vimeo.com/{{.}}" target="_blank" title="Vimeo"><i class="fa fa-vimeo"></i></a></li>
+<li><a href="https://vimeo.com/{{.}}" target="_blank" title="Vimeo"><i class="fa fa-vimeo"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.spotify }}
-<li><a href="//open.spotify.com/user/{{.}}" target="_blank" title="Spotify"><i class="fa fa-spotify"></i></a></li>
+<li><a href="https://open.spotify.com/user/{{.}}" target="_blank" title="Spotify"><i class="fa fa-spotify"></i></a></li>
 {{ end }}
 
 {{ with .Site.Social.gplus }}
-<li><a href="//plus.google.com/+{{.}}" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="https://plus.google.com/+{{.}}" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
 {{ end }}
 
 <li><a href="{{ "/index.xml" | absURL }}" target="_blank" title="RSS" type="application/rss+xml"><i class="fa fa-rss"></i></a></li>
