--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,7 +23,7 @@
     </script>
     {{ end }}
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
