Update theme to use a different article header on the home page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -67,6 +67,11 @@ figure.side-by-side {
   padding: 10px;
 }
 
+.h1 {
+  font-size: 2em;
+  margin: 0.67em 0 !important;
+}
+
 
 /* Carbon Ads
 ------------------------------------------------------------------ */
