--- a/layouts/partials/article-header-home.html
+++ b/layouts/partials/article-header-home.html
@@ -1,5 +1,5 @@
 <header class="post-info">
-    <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
+    <h2 class="h1"><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h2>
     {{ .Site.Data.l10n.article.posted_on }}
     <span class="post-meta">
         <time datetime="{{ .Date.Format "2006.01.02" }}">{{ .Date.Format "2006.01.02" }}</time>
