Update theme to use <h1> only on single pages

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,6 +6,7 @@
             <nav>
                 <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
             </nav>
+            {{ $.Scratch.Set "single" true }}
             {{ partial "article-header" . }}
             {{ .Content }}
             {{ partial "article-share" . }}
