--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -1,5 +1,6 @@
 <article class="post">
-    {{ partial "article-header-home" . }}
+    {{ $.Scratch.Set "single" false }}
+    {{ partial "article-header" . }}
     <p>{{ printf "%s" .Summary | markdownify }}&hellip;</p>
     <a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Site.Data.l10n.article.read_more }} &raquo;</a>
 </article>
