--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -26,4 +26,4 @@
 <li><a href="https://plus.google.com/+{{.}}" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
 {{ end }}
 
-<li><a href="{{ "/index.xml" | absURL }}" target="_blank" title="RSS" type="application/rss+xml"><i class="fa fa-rss"></i></a></li>
+<li><a href="{{ "/index.xml" | absURL }}" target="_blank" title="RSS" rel="alternate" type="application/rss+xml"><i class="fa fa-rss"></i></a></li>
