Update to Hugo 0.18.1

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -42,8 +42,8 @@
     <link rel="apple-touch-icon" href="{{ "/apple-touch-icon.png" | relURL }}">
 
     <!-- RSS -->
-    {{ if .RSSlink }}
-      <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
+    {{ if .RSSLink }}
+      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
     {{ end }}
 
     <!-- Google authorship -->
