Add sponsors list

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,9 @@
           {{ .Site.Params.license | markdownify }}<br/>
           {{ .Site.Params.powerby | markdownify }}
         </p>
+        <p>
+          Sponsored by: <a href="https://www.apicasystem.com/load-testing/">Website Load Test</a> : 2M+ concurrent users
+        </p>
       </div>
     </footer>
 
