--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -7,5 +7,5 @@
   <ul class="social">
     {{ partial "social" . }}
   </ul>
-  <script async src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=samaxescom" id="_carbonads_js"></script>
+  <script async src="//cdn.carbonads.com/carbon.js?serve=CKYIK23N&placement=samaxescom" id="_carbonads_js"></script>
 </aside>
